# scrysynth

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  vite.config.ts
docs/: idea.md  (+1 more)
src-tauri/: Cargo.toml  build.rs  scrysynth-session-test.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/synthdefs/v1/: generate_synthdefs.py  scrysynth_v1_fx_delay.scsyndef  scrysynth_v1_fx_lowpass.scsyndef  scrysynth_v1_mixer.scsyndef  scrysynth_v1_output.scsyndef  scrysynth_v1_source_noise.scsyndef  scrysynth_v1_source_oscillator.scsyndef  scrysynth_v1_synthdefs.scd
src-tauri/resources/synthdefs/v2/: generate_synthdefs.py  scrysynth_v2_chorus.scsyndef  (+13 more)
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: agent_command.rs  agent_planner.rs  graph_edit.rs  macro_command.rs  midi_learn.rs  mod.rs  performance_command.rs  session_store.rs
src-tauri/src/audio/: compiler.rs  mod.rs  runtime_manager.rs  sequencer.rs  supercollider.rs  synthdefs.rs
src-tauri/src/catalog/: entries.rs  mod.rs
src-tauri/src/domain/: session.rs
src-tauri/src/hardware/: midi_input.rs  mod.rs  osc_input.rs
src-tauri/src/persistence/: mod.rs  session_file.rs
src-tauri/src/visual/: adapter.rs  bevy_runtime.rs  bevy_sidecar.rs  compiler.rs  mod.rs  protocol.rs  runtime_manager.rs  sidecar.rs
src-tauri/tests/: agent_commands.rs  approval_flow.rs  audio_graph_commands.rs  audio_runtime.rs  macro_commands.rs  midi_learn.rs  performance_commands.rs  session_persistence.rs  visual_runtime.rs  visual_sidecar_uat.rs
(+125 files in other folders)
